# CircuitPython_P1AM

./: README.md  pyproject.toml
P1AM/: P1AM.py  __init__.py  constants.py
examples/: analog_input.py  analog_output.py  base_disable.py  discrete_input.py  discrete_output.py  module_and_channel_objects.py  module_configuration.py  object_zero_indexing.py  power_cycle.py  pwm_output.py  read_temperature.py  toggle_switch.py  watchdog.py
examples/HSC/: hsc_counting_mode.py  hsc_inhibit_counting.py  hsc_read_inputs.py  hsc_read_position.py  hsc_rotary.py  hsc_z_reset.py
